Added stack trace display for ayano bot, added restart and reconnect

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "inquirer": "^7.0.4",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
-    "mongoose": "^5.8.9"
+    "mongoose": "^5.8.9",
+    "require-reload": "^0.2.2"
   },
   "bin": {
     "ayy": "./cli.js"
