Fixed issue with date parsing for boosts and promos

--- a/config.dest.json
+++ b/config.dest.json
@@ -10,6 +10,9 @@
         "baseurl": "https://amusementclub.nyc3.cdn.digitaloceanspaces.com",
         "shorturl": "https://amuse.noxc.dev",
         "daily": 72000000,
+        "debug": false,
+        "invite": "",
+        "maintenance ": false,
         "auditc": {
             "channel": ""
         }
