Add restart, git pull, ayano mods
git pull will currently restarts, but can just as easily be made to not restart amusement

--- a/config.dest.json
+++ b/config.dest.json
@@ -21,7 +21,8 @@
         "token": "",
         "prefix": "ayy",
         "reportchannel": "",
-        "admins": []
+        "admins": [],
+        "mods": []
     },
     "aws": {
         "endpoint": "nyc3.digitaloceanspaces.com",
