--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ayano",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Manager of Amusement Club Discord game",
   "main": "index.js",
   "repository": "https://github.com/NoxCaos/ayano",
@@ -15,7 +15,7 @@
     "aws-sdk": "^2.844.0",
     "command-line-args": "^5.1.1",
     "datejs": "^1.0.0-rc3",
-    "eris": "^0.14.0",
+    "eris": "^0.15.1",
     "forever-monitor": "^3.0.3",
     "inquirer": "^7.3.3",
     "lodash": "^4.17.21",
@@ -24,6 +24,6 @@
     "require-reload": "^0.2.2"
   },
   "bin": {
-    "ayy": "./cli.js"
+    "ayy": "cli.js"
   }
 }
