--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "body-parser": "^1.20.1",
     "command-line-args": "^5.1.1",
     "datejs": "^1.0.0-rc3",
-    "eris": "^0.17.1",
     "express": "^4.18.2",
     "inquirer": "^7.3.3",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
     "mongoose": "^6.5.1",
+    "oceanic.js": "^1.4.1",
     "require-reload": "^0.2.2"
   },
   "bin": {
