--- a/config.dest.json
+++ b/config.dest.json
@@ -27,7 +27,8 @@
         "channels": {
             "tagLog": "DISCORD_VALID_CHANNEL_ID_GOES_HERE",
             "guildLog": "DISCORD_VALID_CHANNEL_ID_GOES_HERE",
-            "evalUpdate" :"DISCORD_VALID_CHANNEL_ID_GOES_HERE"
+            "evalUpdate" :"DISCORD_VALID_CHANNEL_ID_GOES_HERE",
+            "report" :"DISCORD_VALID_CHANNEL_ID_GOES_HERE"
         },
         "effects": {
             "uniqueFrequency": 10
