Transfer hardcode items to config Shard Manage Ayano for reconnections

--- a/config.dest.json
+++ b/config.dest.json
@@ -1,6 +1,8 @@
 {
     "grouptimeout": 1000,
     "database": "",
+    "dbname": "amusement2",
+    "amusementFolder": "../amusementclub2.0",
     "amusement": {
         "analytics": {
             "mixpanel": ""
